vlib/v/parser/tests/expr_evaluated_but_not_used_a.out
vlib/v/parser/tests/expr_evaluated_but_not_used_a.vv:2:2: error: expression evaluated but not used
    1 | fn main() {
    2 |     'hello'
      |     ~~~~~~~
    3 | }
